# gfx_types

./: Cargo.toml  README.md
benches/: color_bench.rs  geometry_bench.rs
examples/: buffer_example.rs  color_example.rs  geometry_example.rs
src/: lib.rs
src/buffer/: descriptor.rs  handle.rs  mod.rs  region.rs  usage.rs  view.rs
src/color/: blend.rs  color.rs  format.rs  mod.rs  palette.rs  space.rs
src/damage/: mod.rs  region.rs
src/display/: info.rs  mod.rs  output.rs
src/geometry/: circle.rs  insets.rs  line.rs  mod.rs  point.rs  polygon.rs  rect.rs  size.rs  transform.rs
src/input/: cursor.rs  mod.rs  touch.rs
src/render/: clip.rs  command.rs  mod.rs  pipeline.rs
src/text/: font.rs  glyph.rs  mod.rs
src/window/: effects.rs  flags.rs  layer.rs  mod.rs  state.rs  surface.rs
tests/: buffer_tests.rs  color_tests.rs  geometry_tests.rs
